@@ -16,7 +16,7 @@ class PippoTester(unittest.TestCase):
         try:
             gtrc = sys.gettotalrefcount
         except AttributeError:
-            print "Please run this with python_d for leak tests"
+            print("Please run this with python_d for leak tests")
             gtrc = lambda: 0
         # note creating self.object() should have consumed our "one time" leaks
         self.object.Method1()
@@ -31,14 +31,37 @@ class PippoTester(unittest.TestCase):
 
     def testResults(self):
         rc, out1 = self.object.Method2(123, 111)
-        self.failUnlessEqual(rc, 123)
-        self.failUnlessEqual(out1, 222)
+        self.assertEqual(rc, 123)
+        self.assertEqual(out1, 222)
+
+    def testPythonArrays(self):
+        self._testArray([-3, -2, -1, 0, 1, 2, 3])
+        self._testArray([-3.14, -2, -.1, 0., 1.1, 2.5, 3])
+
+    def testNumpyArrays(self):
+        try:
+            import numpy
+        except:
+            print("Numpy test not possible because numpy module failed to import")
+            return
+        self._testArray(numpy.array([-3, -2, -1, 0, 1, 2, 3]))
+        self._testArray(numpy.array([-3.14, -2, -.1, 0., 1.1, 2.5, 3]))
+
+    def testByteArrays(self):
+        if 'bytes' in dir(__builtins__):
+            # Use eval to avoid compilation error in Python 2.
+            self._testArray(eval("b'abcdef'"))
+            self._testArray(eval("bytearray(b'abcdef')"))
+
+    def _testArray(self, inArray):
+        outArray = self.object.Method3(inArray)
+        self.assertEqual(list(outArray), list(inArray))
 
     def testLeaksGencache(self):
         try:
             gtrc = sys.gettotalrefcount
         except AttributeError:
-            print "Please run this with python_d for leak tests"
+            print("Please run this with python_d for leak tests")
             gtrc = lambda: 0
         # note creating self.object() should have consumed our "one time" leaks
         object = EnsureDispatch("Python.Test.Pippo")
